--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="publication-links">
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/anonymous-rsp/reflected-search-poisoning"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
